# fm-client-sdk-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_all.sh  grpc_facade.crt
cmake/: FindGRPC.cmake  FindProtobuf.cmake
example/: .gitignore
example/client-simulator/: CMakeLists.txt  DeviceSimulator.cpp  DeviceSimulator.hpp  ISimulator.cpp  ISimulator.hpp  PilotSimulator.cpp  PilotSimulator.hpp  deviceSim-config.ini  deviceSim.cpp  pilotSim-config.ini  pilotSim.cpp
include/: Constants.hpp  Device.hpp  IClient.hpp  Pilot.hpp
include/backend/: ChannelsHandler.hpp  ClientBackend.hpp  HeartbeatHandler.hpp
include/core/: CoreClient.hpp
include/core/https/: HttpsClient.hpp
include/event/input/: IInputEvent.hpp
include/event/input/connection/: ConnectionEvent.hpp  Received.hpp
include/event/input/user/: CloseChannels.hpp  OpenChannels.hpp  Operate.hpp  ReleaseAccepted.hpp  ReleaseRejected.hpp  RequestControl.hpp  UserEvent.hpp
include/event/output/: ChannelsClosing.hpp  ChannelsOpened.hpp  Error.hpp  FacadeEvent.hpp  HandoverAccepted.hpp  ProcedureRejected.hpp  ReleaseControl.hpp
include/state/: IState.hpp
include/state/device/: Connected.hpp  Connecting.hpp  Disconnected.hpp  Disconnecting.hpp
include/state/device/connected/: Flying.hpp  Ready.hpp  Recovering.hpp  Released.hpp  Releasing.hpp
include/state/pilot/: Connected.hpp  Connecting.hpp  Disconnected.hpp  Disconnecting.hpp
include/state/pilot/connected/: ClosingChannels.hpp  OpeningChannels.hpp  Operating.hpp  Recovering.hpp  Released.hpp  ReleasingControl.hpp  RequestingControl.hpp  ValidatingChannels.hpp
include/system/: IState.hpp  IStateMachine.hpp  Timer.hpp
include/traffic/: ChannelImpl.hpp  IChannel.hpp
include/traffic/socket/: ISocket.hpp  TcpSocket.hpp  TlsTcpSocket.hpp  UdpSocket.hpp
source/: Device.cpp  IClient.cpp  Pilot.cpp
source/backend/: ChannelsHandler.cpp  ClientBackend.cpp  HeartbeatHandler.cpp
source/core/: CoreClient.cpp
source/core/https/: HttpsClient.cpp
source/event/input/: IInputEvent.cpp
source/event/input/connection/: ConnectionEvent.cpp  Received.cpp
source/event/input/user/: CloseChannels.cpp  OpenChannels.cpp  Operate.cpp  ReleaseAccepted.cpp  ReleaseRejected.cpp  RequestControl.cpp  UserEvent.cpp
source/event/output/: ChannelsClosing.cpp  ChannelsOpened.cpp  Error.cpp  FacadeEvent.cpp  HandoverAccepted.cpp  ProcedureRejected.cpp  ReleaseControl.cpp
source/state/: IState.cpp
source/state/device/: Connected.cpp  Connecting.cpp  Disconnected.cpp  Disconnecting.cpp
source/state/device/connected/: Flying.cpp  Ready.cpp  Recovering.cpp  Released.cpp  Releasing.cpp
source/state/pilot/: Connected.cpp  Connecting.cpp  Disconnected.cpp  Disconnecting.cpp
source/state/pilot/connected/: ClosingChannels.cpp  OpeningChannels.cpp  Operating.cpp  Recovering.cpp  Released.cpp  ReleasingControl.cpp  RequestingControl.cpp  ValidatingChannels.cpp
source/system/: Timer.cpp
source/traffic/: ChannelImpl.cpp  IChannel.cpp
source/traffic/socket/: ISocket.cpp  TcpSocket.cpp  TlsTcpSocket.cpp  UdpSocket.cpp
